# ROS2-Testing

./: README.md
catkin_ws/: ekf_sensor_fusion.cpp  lakibeam_live_plot.cpp  lakibeam_reader.cpp  serial_odometry.cpp
catkin_ws/install/: local_setup.sh  setup.sh
catkin_ws/install/lakibeam1/lib/lakibeam1/: lakibeam1_scan_node
catkin_ws/install/lakibeam1/share/lakibeam1/: package.sh
catkin_ws/log/: latest_build
catkin_ws/src/Lakibeam_ROS2_Driver/launch/: lakibeam1_scan_standalone.py  lakibeam1_scan_view.py
catkin_ws/src/install/: local_setup.sh  setup.bash  setup.sh
catkin_ws/src/install/lakibeam1/share/lakibeam1/: local_setup.sh  package.sh
catkin_ws/src/log/: latest_build
dev_ws/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
dev_ws/log/: latest_build
dev_ws/src/articubot_one/description/: robot.urdf.xacro  robot_core.xacro
dev_ws/src/articubot_one/launch/: launch_robot.launch.py  launch_sim.launch.py
dev_ws/src/serial_to_ros2/: package.xml  setup.py
dev_ws/src/serial_to_ros2/serial_to_ros2/: serial_to_jetson.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/arduino_interface/lib/arduino_interface/: arduino_serial_node
ros2_ws/install/arduino_interface/share/arduino_interface/: package.ps1  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/arduino_interface/: package.xml  setup.py
ros2_ws/src/arduino_interface/arduino_interface/: arduino_serial_node.py
ros2_ws/src/arduino_interface/launch/: arduino_interface.launch.py
(+1 files in other folders)
