<?xml version="1.0"?>
<package format="3">
  <name>serial_to_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 package to read Arduino serial and publish IMU and Odometry topics</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>pyserial</exec_depend>

</package>
